# vecds

./: AUTHORS  BUGS  CHANGELOG  CHANGES  CMakeLists.txt  README  README.md  build.sh  cleanallreleaseFEMApp  compilerelease  gui  makeallreleaseFEMApp  vecds-doc  vecds.pro
FEMApp/: cleanallreleaseFEMApp  compilerelease  makeallreleaseFEMApp
FEMApp/CoupledFields/: adj3d.f  brick27.f  brick64.f  brick8.f  cdata.h  checkshp.f  checksym.f  chem.f  chemxi.f  conlump.f  constx.f  det3d.f  disl.f  divp1c.f  divpol.f  divpolbet.f  divpolel.f  divpoleps.f  divpolx.f  divsig.f  divsigbet.f  divsigel.f  divsigeps.f  divsigx.f  divxv.f  divxvbet.f  divxveps.f  divxvx.f  eig3.f  elas.f  eldata.h  elect.f  elform.f  elmlib.f  elmt14.f  eltran.h  energy.f  inv2d.f  inv334.f  inv3d.f  (+23 more)
FEMApp/FEMAppLib/: AtomAssignment.cpp  AtomAssignment.h  ElemSelectionReader.cpp  ElemSelectionReader.h  FEMAppInterface.cpp  FEMAppInterface.h  FEMAppLib.pro  FEMAppLib.pro.user.18  FEMAppLib.pro.user.194183a  FEMAppLib.pro.user.3.2-pre1  FEMAppLib.pro.user.76499ee  FEMProject.cpp  FEMProject.h  GraphData.h  Makefile  Model.cpp  Model.h  ModelObject.cpp  ModelObject.h  NodalSelectionReader.cpp  NodalSelectionReader.h  PostProcessingItemXMLOutput.cpp  PostProcessingItemXMLOutput.h  StatamentDOFs.cpp  StatamentDOFs.h  StatementAtom.cpp  StatementAtom.h  StatementAtoms.cpp  StatementAtoms.h  StatementBoundaryConditions.cpp  StatementBoundaryConditions.h  StatementElemDef.cpp  StatementElemDef.h  StatementElements.cpp  StatementElements.h  StatementEquation.cpp  StatementEquation.h  StatementFeap.cpp  StatementFeap.h  StatementMaterial.cpp  (+29 more)
FEMApp/FEMGraphLib/: CGraphObject.h  Contour.cpp  Contour.h  FEMGraphLib.pro  FEMGraphLib.pro.user.18  FEMGraphLib.pro.user.194183a  FEMGraphLib.pro.user.3.2-pre1  FEMGraphLib.pro.user.76499ee  GraphAlgorithms.h  GraphEdge.cpp  GraphEdge.h  GraphFE.cpp  GraphFE.h  GraphFace.cpp  GraphFace.h  GraphModel.cpp  GraphModel.h  GraphNode.cpp  GraphNode.h  GraphObject.cpp  GraphObject.h  Makefile  PaintFrameFECanvas.cpp  PaintFrameFECanvas.h  PaintSetup.cpp  PaintSetup.h  PostProcessingItemPlot.cpp  PostProcessingItemPlot.h  PostProcessingItemPlotGraph.cpp  PostProcessingItemPlotGraph.h
FEMApp/FEMLib/: BarFiniteElement.cpp  BarFiniteElement.h  Crack.cpp  Crack.h  CrackInInterface.cpp  CrackInInterface.h  CrackLine.cpp  CrackLine.h  Curve.cpp  Curve.h  DOF.cpp  DOF.h  DOFVector.cpp  DOFVector.h  DOF_Ax.cpp  DOF_Ax.h  DOF_Ay.cpp  DOF_Ay.h  DOF_Bx.cpp  DOF_Bx.h  DOF_By.cpp  DOF_By.h  DOF_C.cpp  DOF_C.h  DOF_D.cpp  DOF_D.h  DOF_Fix.cpp  DOF_Fix.h  DOF_Fiy.cpp  DOF_Fiy.h  DOF_Fiz.cpp  DOF_Fiz.h  DOF_T.cpp  DOF_T.h  DOF_Ux.cpp  DOF_Ux.h  DOF_Uy.cpp  DOF_Uy.h  DOF_Uz.cpp  DOF_Uz.h  (+259 more)
FEMApp/GraphLib/: BarPlot.cpp  BarPlot.h  BoxPlot.cpp  BoxPlot.h  GraphData.h  GraphDebugClass.cpp  GraphDebugClass.h  GraphDevice.cpp  GraphDevice.h  GraphDevicePS.cpp  GraphDevicePS.h  GraphDevicePrm.cpp  GraphDevicePrm.h  GraphDeviceSVG.cpp  GraphDeviceSVG.h  GraphDeviceSizer.cpp  GraphDeviceSizer.h  GraphDeviceXML.cpp  GraphDeviceXML.h  GraphLib.pro  GraphLib.pro.user.18  GraphLib.pro.user.194183a  GraphLib.pro.user.3.2-pre1  GraphLib.pro.user.76499ee  GraphObject.cpp  GraphObject.h  GraphObjectGroup.cpp  GraphObjectGroup.h  GraphReceiverXML.cpp  GraphReceiverXML.h  Graphics.cpp  Graphics.h  Histogram.cpp  Histogram.h  HistogramPlot.cpp  HistogramPlot.h  Makefile  MultiBoxPlot.cpp  MultiBoxPlot.h  PaintFrame.cpp  (+21 more)
FEMApp/LangLib/: CharValidators.h  FileLangStream.cpp  FileLangStream.h  LangException.cpp  LangException.h  LangLib.pro  LangLib.pro.user.18  LangLib.pro.user.194183a  LangLib.pro.user.3.2-pre1  LangLib.pro.user.76499ee  LangStream.cpp  LangStream.h  LangToken.h  ListParameter.h  ListParameterWhite.h  Makefile  NamedParameter.h  NumberList.cpp  NumberList.h  ParamList2.h  ParamList3.h  Statement.cpp  Statement.cpp~  Statement.h  Statement.h~  SubSetList.cpp  SubSetList.h  multiread.h  statdef.h
FEMApp/MathLib/: AlgorithmsMath.h  Clonable.h  Cloner.h  DBNode.cpp  DBNode.h  DomainContainer.cpp  DomainContainer.h  ERF.cpp  ERF.h  Expression.cpp  Expression.h  ExpressionAbs.cpp  ExpressionAbs.h  ExpressionAcos.cpp  ExpressionAcos.h  ExpressionAsin.cpp  ExpressionAsin.h  ExpressionAtan.cpp  ExpressionAtan.h  ExpressionBracket.cpp  ExpressionBracket.h  ExpressionConstant.cpp  ExpressionConstant.h  ExpressionCosh.cpp  ExpressionCosh.h  ExpressionCosinus.cpp  ExpressionCosinus.h  ExpressionE.cpp  ExpressionE.h  ExpressionExp.cpp  ExpressionExp.h  ExpressionHeavisite.cpp  ExpressionHeavisite.h  ExpressionLn.cpp  ExpressionLn.h  ExpressionLog.cpp  ExpressionLog.h  ExpressionNegative.cpp  ExpressionNegative.h  ExpressionPI.cpp  (+184 more)
FEMApp/MolecularLib/: Atom.cpp  Atom.h  MException.h  Makefile  MolecularLib.pro  MolecularLib.pro.user.18  MolecularLib.pro.user.194183a  MolecularLib.pro.user.3.2-pre1  MolecularLib.pro.user.76499ee  MolecularStructure.cpp  MolecularStructure.h
FEMApp/XMLLib/: Makefile  XML.cpp  XML.h  XMLLib.pro  XMLLib.pro.user.18  XMLLib.pro.user.194183a  XMLLib.pro.user.3.2-pre1  XMLLib.pro.user.76499ee  iter_if.h  xml_analyser.cpp  xml_analyser.h  xml_cdata.cpp  xml_cdata.h  xml_charvalidators.h  xml_constant.h  xml_creator.cpp  xml_creator.h  xml_doctype.cpp  xml_doctype.h  xml_element.cpp  (+19 more)
common/: config.h
doc/: index.html  main.h
include/: adds.h  atoms.h  calc.h  dialogs.h  formats.h  gener.h  globals.h  helpbrowser.h  internal.h  lattice.h  mainwindow.h  miscfunc.h  osgscene.h  osgv.h  points.h  simplepad.h  vecds.qrc
share/: config.h  vecds_pl.ts
source/: adds.cpp  adds.h  arc_ball.cxx  arcball.cpp  arcball.cxx  atoms.cpp  atoms.h  browser_base.cxx  calc.cpp  calc.h  dialog_base.cxx  dialogs.cpp  dialogs.cxx  doc_browser.cxx  formats.cpp  gener.cpp  gener.h  help_browser.cpp  help_browser.cxx  helpbrowser.cpp  internal.cpp  internal.cxx  internal.h  lattice.cpp  lattice.h  main.cpp  main.cxx  main_viewer.cpp  main_viewer.cxx  main_window.cpp  main_window.cxx  mainwindow.cpp  mainwindow.h  miscfunc.cpp  osgscene.cpp  osgscene.h  osgv.cpp  osgv.h  picking.cpp  picking.h  (+5 more)
(+154 files in other folders)
